# GanaderiaBi

./: .gitignore  .pre-commit-config.yaml  ADMIN_ARCHITECTURE.md  ANALISIS_USE_CASES.md  ARQUITECTURA.md  CORRECCIONES_ADMIN.md  DATABASE_ARCHITECTURE.md  DOCUMENTACION_APIS.md  ESTADO_PROYECTO.md  MIGRACION_CONTROLLERS.md  Makefile  NUEVA_ESTRUCTURA_USE_CASES.md  PLAN_MIGRACION_AJUSTADO.md  README.md  REGLAS_DESARROLLO.md  create_migrations.py  db_compatibility.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  settings.py  urls.py  wsgi.py
apps/: __init__.py
apps/analytics/: __init__.py  admin.py
apps/analytics/domain/: __init__.py  enums.py
apps/analytics/domain/entities/: __init__.py  dashboard_data.py  historial_estado_marca.py  kpi_ganado_bovino.py  logo_marca_bovina.py  marca_ganado_bovino.py  reporte_data.py
apps/analytics/domain/repositories/: __init__.py  dashboard_repository.py  historial_repository.py  kpi_repository.py  logo_repository.py  marca_repository.py  reporte_repository.py
apps/analytics/infrastructure/: __init__.py  container.py
apps/analytics/migrations/: 0001_initial.py  0002_alter_kpiganadobovinomodel_fecha.py
apps/analytics/presentation/: __init__.py  urls.py
apps/analytics/use_cases/: __init__.py  dashboard_use_cases.py  historial_use_cases.py  kpi_use_cases.py  logo_use_cases.py  marca_use_cases.py  reporte_use_cases.py
business_intelligence/: admin.py  serializers.py  services.py  urls.py
business_intelligence/management/commands/: generar_datos.py
business_intelligence/views/: __init__.py  dashboard_views.py  estadisticas_views.py  historial_views.py  kpi_views.py  logo_bovino_views.py  marca_bovino_views.py  reportes_views.py
docs/: ESTADO_PROYECTO.md
ganaderia_bi/: __init__.py  admin_config.py  db_compatibility.py  settings.py  urls.py
scripts/: README.md  apply_migrations_manual.py  create_basic_database.sql  create_db_simple.py  create_django_tables.py  create_superuser.py  create_tables.py  fix_admin_urls.py  generar_datos_kpi_realistas.py  generar_historial_logos.py  insert_test_data_fixed.py  migrar_legacy_a_clean_architecture.py  setup_complete_database.py  setup_database.py  verify_system.py
static/admin/css/: analytics_admin.css  base_admin.css  custom_admin.css  dashboard_admin.css  historial_admin.css  kpi_admin.css  logo_admin.css  marca_admin.css  reporte_admin.css
static/admin/js/: analytics_admin.js  chart-component.js  custom_admin.js  dashboard_admin.js  reporte_admin.js
templates/admin/: base_site.html  index.html  logo_analizar_individual.html  marca_workflow.html
tests/: README.md  __init__.py  conftest.py  run_tests.py
(+126 files in other folders)
